Fix the nav bar and align it appropriately

--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ header {
 nav {
     display:flex;
     justify-content: space-between;
-    gap: 450px;
+    gap: 490px;
     margin-top: 8px;
     margin-bottom: 0;
 }
